@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="build" name="RSSTray">
+<project basedir="." default="build" name="TrayRSS">
 	<property environment="env" />
 	<property name="ECLIPSE_HOME" value="../../../eclipse" />
 	<property name="debuglevel" value="source,lines,vars" />
@@ -9,11 +9,12 @@
 		<pathelement location="${ECLIPSE_HOME}/plugins/org.junit4_4.5.0.v20090423/junit.jar" />
 		<pathelement location="${ECLIPSE_HOME}/plugins/org.hamcrest.core_1.1.0.v20090501071000.jar" />
 	</path>
-	<path id="RSSTray.classpath">
+	<path id="TrayRSS.classpath">
 		<pathelement location="bin" />
+		<pathelement location="bin/resources/log4j.properties" />
 		<path refid="JUnit 4.libraryclasspath" />
 		<pathelement location="lib/jdom/jdom.jar" />
-		<pathelement location="lib/log4j/log4j-1.2.15.jar" />
+		<pathelement location="lib/log4j/log4j-1.2.16.jar" />
 		<pathelement location="lib/rome/rome-1.0.jar" />
 		<pathelement location="lib/hsqldb/hsqldb.jar" />
 		<pathelement location="lib/hibernate/hibernate3.jar" />
@@ -32,6 +33,7 @@
 		<pathelement location="lib/jcalendar/lib/looks-2.0.1.jar" />
 		<pathelement location="lib/junit/junit-4.7.jar" />
 		<pathelement location="lib/JNotification/JNotification.jar"/>
+		<pathelement location="lib/swixml/sqixml.jar"/>
 	</path>
 
 	<target name="init">
@@ -58,7 +60,7 @@
 		<echo message="${ant.project.name}: ${ant.file}" />
 		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" source="${source}" target="${target}">
 			<src path="src" />
-			<classpath refid="RSSTray.classpath" />
+			<classpath refid="TrayRSS.classpath" />
 		</javac>
 	</target>
 
@@ -85,19 +87,19 @@
 		<java classname="at.nullpointer.trayrss.TrayRSS" failonerror="true" fork="yes">
 			<jvmarg line="-splash:img/rsstray.PNG" />
 			<arg line="-debug" />
-			<classpath refid="RSSTray.classpath" />
+			<classpath refid="TrayRSS.classpath" />
 		</java>
 	</target>
 
 	<target name="TrayRSS">
 		<java classname="at.nullpointer.trayrss.TrayRSS" failonerror="true" fork="yes">
 			<jvmarg line="-splash:img/rsstray.PNG" />
-			<classpath refid="RSSTray.classpath" />
+			<classpath refid="TrayRSS.classpath" />
 		</java>
 	</target>
 
 	<target name="dist" depends="rebuild">
-		<property name="version.num" value="1.0" />
+		<property name="version.num" value="1.1" />
 		<property name="suffix" value="" />
 		<buildnumber file="dist/build.num" />
 		<tstamp>
@@ -155,12 +157,13 @@
 			<zipfileset excludes="META-INF/*.SF" src="lib/hibernate/lib/required/slf4j-log4j12-1.5.8.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/hsqldb/hsqldb.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jdom/jdom.jar" />
-			<zipfileset excludes="META-INF/*.SF" src="lib/log4j/log4j-1.2.15.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/log4j/log4j-1.2.16.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/rome/rome-1.0.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jcalendar/lib/jcalendar-1.3.3.mod.pt.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jcalendar/lib/looks-2.0.1.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/junit/junit-4.7.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/JNotification/JNotification.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/swixml/swixml.jar" />
 		</jar>
 		
 		<zip destfile="dist/TrayRSS${version.num}-b${build.number}${suffix}.zip"
